--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-# moanarowno.github.io
+<DOCTYPE html>
+
+
+<html>
+
+
+       <head>
+
+              <title>My First Webpage (page 1)</title>
+
+       <head>
+
+
+<body> 
+
+<a href = "rownak.html">Go t page 2</a>
+
+
+</body>
+
+</html>
