--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div style="background-color:orange;color:white;padding:05px;">
 	<u> ACADEMIC QUALIFICATIONS	</u>
 	</h3>
-	<a href="AQ.html"> Click Here </a>
+	<a href="moanarowno.github.io/AQ.html"> Click Here </a>
 
 	<h3>
 	<div style="background-color:orange;color:white;padding:05px;">
